# ekstraktor-koryciarstwa

./: .gitignore  AGENTS.md  EXTRACTOR_WRAPPER_README.md  README.md  config.yaml  example.py  generate_report.py  metadata.json  parse_results.py  pyproject.toml  pytest-v1.ini  pytest.ini  test_parse2.py  wrapped_pipeline_v2.py
.ipynb_checkpoints/: final_output-checkpoint.json
examples/: example_output.json
fixtures/: olsztyn_wodkan.html  rp_klich.html  wp_lubczyk.html
inputs/: ai42.pl__2024__08__04__czy-wojt-ukrywa-nepotyzm.html  businessinsider_kadrowa_czystka_panstwowa_spolka.html  dziennikzachodni.pl__nepotyzm-w-bytomiu-radni-reprezentujacy-pis-zawiadomienie-cba__c1-16375383.html  interwencja.polsatnews.pl__reportaz__2013-11-29__bardzo-rodzinne-starostwo_1329791.html  natemat_giermasinska.html  niezalezna.pl__polityka__usmiechniete-synekury-polski-2050-31-tys-zl-dla-prezesa-kzn-i-etaty-dla-dzialaczy__533532.html  niezalezna_polski2050_synekury.html  oko.press__miliony-pajeczyna-rydzyka.html  oko_miliony_pajeczyna_rydzyka.html  olsztyn.tvp.pl__41863255__z-wiceprezydenta-na-wiceprezesa-jaroslaw-sloma-w-zarzadzie-olsztynskich-wodociagow__downloaded_20260427.html  olsztyn_roosevelta_negative.html  olsztyn_wodkan.html  onet_totalizator.html  onet_totalizator_leca_glowy.html  onet_trzaskowski_kopania_phn.html  onet_wfosigw_lublin.html  pleszew24.info__pl__12_biznes__16076_radna-powiatowa-z-posada-zmiana-prezesa-slynnej-panstwowej-stadniny-koni.html  radomszczanska.pl__artykul__nowy-zaciag-tlustych-n1256470.html  radomszczanska_nowy_zaciag.html  rp_klich.html  (+17 more)
(+352 files in other folders)
