[project]
name = "extractor"
version = "0.1.0"
description = "Multi-stage Polish political nepotism extraction pipeline"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "llama-cpp-python>=0.3.0",
  "numpy>=1.24",
  "peft>=0.17.1",
  "pydantic>=2.13.0",
  "pyyaml>=6.0.2",
  "sentence-transformers>=4.1.0",
  "spacy>=3.8.5",
  "stanza>=1.11.1",
  "trafilatura>=2.0.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "ruff>=0.15.10",
  "ty>=0.0.29",
  "vulture>=2.16",
]

[project.scripts]
extractor = "pipeline.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]

[tool.ruff.lint.per-file-ignores]
"tests/integration/test_benchmark.py" = ["E501"]
"tests/test_preprocessing.py" = ["E501"]

[tool.pytest.ini_options]
markers = [
  "llm: tests for the LLM extraction pipeline; skipped unless --run-llm is passed",
]
